<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="hello" translatable="false">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="like">like</string>
    <string name="number_of_likes">number_of_likes</string>
    <string name="comment">comment</string>
    <string name="repost">repost</string>
    <string name="number_of_reposts">number_of_reposts</string>
    <string name="number_of_comment">number_of_comment</string>
    <string name="look">look</string>
    <string name="number_of_look">number_of_look</string>
    <string name="autor" translatable="false">Нетология. Университет интернет-профессий будущегоr</string>
    <string name="data" translatable="false">21 мая в 18:36</string>
    <string name="text" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
</resources>