<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        android:src="@drawable/actual_avatar"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts.json/data/authorAvatar" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/autor"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:text="@string/data"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author" />

    <ImageButton
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        android:text="@string/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <ImageView
        android:id="@+id/likevk"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/like"
        app:layout_constraintStart_toStartOf="@+id/content"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:srcCompat="@drawable/likevk" />

    <NumberPicker
        android:id="@+id/numberPicker5"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/number_of_likes"
        app:layout_constraintStart_toEndOf="@+id/likevk"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <ImageView
        android:id="@+id/coment"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="121dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_editor_absoluteX="89dp"
        app:srcCompat="@drawable/comment" />

    <NumberPicker
        android:id="@+id/numberPicker"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/number_of_comment"
        app:layout_constraintStart_toEndOf="@+id/coment"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <ImageView
        android:id="@+id/repost"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/repost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_editor_absoluteX="190dp"
        app:srcCompat="@drawable/repost" />

    <NumberPicker
        android:id="@+id/numberPicker2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/number_of_reposts"
        app:layout_constraintStart_toEndOf="@+id/repost"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <ImageView
        android:id="@+id/look"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/look"
        app:layout_constraintEnd_toStartOf="@+id/numberPicker3"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:srcCompat="@drawable/look" />

    <NumberPicker
        android:id="@+id/numberPicker3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/number_of_look"
        app:layout_constraintEnd_toEndOf="@+id/content"
        app:layout_constraintTop_toBottomOf="@+id/content" />


</androidx.constraintlayout.widget.ConstraintLayout>